fixed the header z-index & modified the app.js file for vex implementation

--- a/css/app.css
+++ b/css/app.css
@@ -82,6 +82,7 @@ header {
 	width: 100%;
 	height: 35px;
 	padding: 15px;
+	z-index: 10;
 	position: fixed;
 	background: none;
 	-webkit-transition: background .2s ease-in-out;
@@ -109,7 +110,7 @@ header:hover {
 	margin-right: 40px;
 	padding-top: 10px;
 	font-weight: 400;
-	cursor: pointer
+	cursor: pointer;
 }
 
 /* Navigation + Vex Overrides */
@@ -159,6 +160,7 @@ header:hover {
 main.home {
 	background: url('../img/home-img.jpg') top center fixed;
 	height: auto;
+	z-index: 0;
 }
 
 .welcome-note {
